@@ -4,6 +4,7 @@ index out of range exception in javax.jmdns.JmDNS	 - ID: 1414816
 Optimization in JmDNS.SocketListener - ID: 1623129
 JMDNS reports IPv6 link local addr as service type - ID: 1791481
 JmDNSImpl.openMulticastSocket() fails on AIX - ID: 2821919
+Service discovery takes about 6 s - FIX - ID: 2910895
 
 CHANGELOG 5 April 2010 Pierre Frisch
 Rev the source code to 3.1.6
